queries/queries.css
/* LG - SMALL LAPTOPS: 1024px - 1280px */

@media (max-width: 72rem) {
  /* 1150px / 16px = 72rem */
  /* 72rem x 16px = 1152px */

  html {
    font-size: 56.25%;
    /* 9px / 16px 56/25% */
  }
  .feattures-grid-container {
    column-gap: 2rem;
  }
  .cta-section {
    margin-bottom: 15rem;
  }
}

/* MD - TABLETS: 768PX - 1024PX */

@media (max-width: 51rem) {
  /* 815px / 16px = 51rem */
  /* 51rem x 16px = 815px */

  html {
    font-size: 50%;
  }
}

/* SM - PHONE LANDSCAPE: 576PX - 768PX */

@media (max-width: 43rem) {
  /* 680px . 16px = 43rem */
  /* 43px . 16px = 688px */

  html {
    font-size: 43.75%;
  }
  .cta-card {
    padding: 8rem 16rem;
  }
  .features-section {
    margin-bottom: 20rem;
  }
  .feattures-grid-container {
    row-gap: 5rem;
    column-gap: 0.5rem;
  }
}

/* XS - PHONE PORTRAINT: < 576px */

@media (max-width: 600px) {
  html {
    font-size: 37.5%;
  }
  .hero-heading-break {
    display: none;
  }
  /* added this new future now */
  .btn {
    color: red;
    font-size: 1.8rem;
  }
  .features-main-heading {
    margin-bottom: 10rem;
  }
  .hero-section {
    height: auto;
  }
  .features-grid-container {
    grid-template-columns: 1fr;
    row-gap: 3rem;
  }
  .feature-img {
    max-width: 100%;
    height: auto;
  }

  .feature-img-swap-order {
    grid-row: auto;
    grid-column: auto;
  }
  .cta-card {
    padding: 4rem 8rem;
    text-align: center;
  }
}

